# D7018_Task5

./: Cargo.toml  README.md  Resources
.cargo/: config
examples/: blink_led.rs  cpu_usage_over_itm.rs  usart.rs
src/: main.rs
