[package]
authors = ["Carl B"]
name = "Assignment_5"
version = "0.1.1"

[dependencies]
cortex-m-rtfm = "0.2.2"
cortex-m = "0.3.1"
rtfm-core = "0.1.0"

[dependencies.f4]
git = "https://github.com/jsjolund/f4"
version = "0.1.0"

[profile.release]
debug = true
lto = true

[profile.dev]
codegen-units = 1
incremental = false